--- a/spring-lemon-exceptions/pom.xml
+++ b/spring-lemon-exceptions/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.naturalprogrammer.spring-lemon</groupId>
+    <groupId>com.ssmichae.spring-lemon</groupId>
     <artifactId>spring-lemon-exceptions</artifactId>
     <packaging>jar</packaging>
 
@@ -11,7 +11,7 @@
     <description>Helper exception handling library for Spring Boot REST APIs</description>
 
     <parent>
-        <groupId>com.naturalprogrammer</groupId>
+        <groupId>com.ssmichae</groupId>
         <artifactId>spring-lemon</artifactId>
         <version>1.0.0.RC2</version>
     </parent>
